force-app/main/default/objects/HealthCloudGA__CarePlanGoal__c/fields/HealthCloudGA__ActivityDate__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ActivityDate__c</fullName>
    <description>Goal&apos;s Due Date</description>
    <inlineHelpText>Goal&apos;s Due Date</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>