force-app/main/default/objects/HealthCloudGA__CarePlanGoal__c/fields/HealthCloudGA__CarePlanProblem__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CarePlanProblem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Health problem this goal is meant to address</description>
    <inlineHelpText>Problem this goal is meant to address</inlineHelpText>
    <label>Problem</label>
    <referenceTo>HealthCloudGA__CarePlanProblem__c</referenceTo>
    <relationshipLabel>Goals</relationshipLabel>
    <relationshipName>CarePlanGoals</relationshipName>
    <type>Lookup</type>
</CustomField>