force-app/main/default/objects/HealthCloudGA__CarePlanGoal__c/fields/HealthCloudGA__Progress__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Progress__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Progress toward achieving goal</description>
    <inlineHelpText>Progress toward achieving goal</inlineHelpText>
    <label>% Progress</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>